# ai-testcase-generator

./: .gitignore  .pre-commit-config.yaml  CLI  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: login.feature.yaml
prompts/: system.md  user.md
src/ai_testgen/: cli.py  generator.py  init.py  llm.py  renderer.py  schemas.py
tests/: test_offline_generator.py  test_schemas.py
